2006-09-02  Marcus Meissner  <marcus@jet.franken.de>
	
	* library.c: CANON cmd 9006 is "lookup object".
	  (Could be used later to speed up directory listing.)

2006-08-31  Marcus Meissner  <marcus@jet.franken.de>

	* library.c: Handle cameras which just have files, but no
	  directory or root object. Kodak EasyShare C330 for instance.

	* library.c: GP_CAPTURE_IMAGE -> GP_OPERATION_CAPTURE_IMAGE.

	* library.c,ptp-bugs.h:  Mark up capture capable cameras for
	  the static capabilities.

	* library.c: added Samsung YP-F2J (from libmtp).

2006-08-30  Marcus Meissner  <marcus@jet.franken.de>

	* library.c: Added iRiver Clix.

2006-08-25  Linus Walleij  <triad@df.lth.se>
	    Marcus Meissner  <marcus@jet.franken.de>

	* ptp.c,library.c,ptp.h,ptp-pack.c:

	  Use iconv(3) to convert the UCS-2 used in ptp
	  strings to the current codeset (detected by
	  nl_langinfo(3)).

2006-08-27  Marcus Meissner  <marcus@jet.franken.de>

	* ptp.c,ptp.h,ptpip.c: Merged upload from fd patch
	  from libmtp folks (Linus Walleij).

2006-08-20  Marcus Meissner  <marcus@jet.franken.de>
	
	* library.c: Do not download 0 sized objects.

	* ptp.{c,h}: Merged libmtp patch "download to fd"
	  to keep in sync with them.

2006-08-10  Marcus Meissner  <marcus@jet.franken.de>
	
	* Added alternate iRiver H10 id, reported by Scott Call.
	* Added SanDisk sansa m240, Samsung YP-U2J, Archos 104

2006-08-07  Hubert Figuiere  <hub@figuiere.net>

	* library.c: Added Canon SD430

2006-07-22  Hubert Figuiere  <hub@figuiere.net>

	* library.c: Added Kodak P850

2006-07-08  Marcus Meissner  <marcus@jet.franken.de>

	* config.c: Hue Adjustment is an Enumeration on Nikon P3.

2006-07-08  Nicolas Boichat  <nicolas@boichat.ch>

	* config.c: Fixed bug in generic handler, when widgets
	  could be added twice.

2006-07-07  Nicolas Boichat  <nicolas@boichat.ch>

	* library.c,ptp.c,ptp.h,ptpip.c:
	  Added configuration upload of WIFI profiles
	  for the Nikon P2.

	* ptpip.c: Generate a random GUID if not set yet